<resources>
    <string name="app_name">Finance Manager</string>
    <string name="full_name">Full Name</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="first_symbol">First Symbol</string>
    <string name="second_symbol">Second Symbol</string>
    <string name="third_symbol">Third Symbol</string>
    <string name="fourth_symbol">Fourth Symbol</string>
    <string name="amount_of_money">Amount of Money</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="amount">Amount</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="date_time"><![CDATA[Date&Time]]></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="click_to_register">Click to Register</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="click_to_login">Click to Login</string>
    <string name="icon">Icon</string>
    <string name="button_back">Button Back</string>
    <string name="button_forward">Button Forward</string>
    <string name="new_transaction">New Transaction</string>
    <string name="pdf_file">PDF file</string>
    <string name="transaction_history">Transaction History</string>
    <string name="new_transfer">New Transfer</string>
    <string name="transfer_history">Transfer History</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="avatar">Avatar</string>
    <string name="personal_preferences">Personal Preferences</string>
    <string name="language">Language</string>
    <string name="change_pin_code">Change Pin Code</string>
    <string name="auth_by_fingerprint">Auth by Fingerprint</string>
    <string name="logout">Logout</string>
    <string name="by_phone">by phone</string>
    <string name="verify">Verify</string>
    <string name="by_email">by email</string>
    <string name="home">Home</string>
    <string name="qrcode">QRCode</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="transfer">Transfer</string>
    <string name="available">Available</string>
    <string name="set_pin">Set Pin</string>
    <string name="check_pin">Check Pin</string>
    <string name="auth_error">Authentication error</string>
    <string name="bio_auth_error">Biometric authentication is not available</string>
    <string name="inc_pin">Incorrect PIN Code!</string>
    <string name="enter_phone_number">Enter Correct Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="auth_app">Authentication approved</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="error">Some problems. Try later.</string>
    <string name="enter_aom">Enter amount of money</string>
    <string name="pos_transfer">Transfer processed</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_themself" translatable="false">You can not transfer yourself</string>
    <string name="access_denied">Access denied</string>

</resources>