<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".RegisterByPhoneActivity">


    <TextView
        android:id="@+id/textView"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/phone_number"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp" />

    <EditText
        android:id="@+id/username"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp" />

    <EditText
        android:id="@+id/fullName"
        android:autofillHints="FullName"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp" />

    <EditText
        android:id="@+id/password"
        android:autofillHints="password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_register"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/registerByPhone"
        android:text="@string/by_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>