<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <RelativeLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/primaryColor"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_toolbar_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="Authentication"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        app:shapeAppearanceOverlay="@style/CircleShape"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/contact_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/signOut"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="#00000000"
        android:tint="@color/white"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintRight_toRightOf="@id/main_toolbar"
        app:layout_constraintTop_toTopOf="@id/main_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/main_toolbar"/>


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/enter_pin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_circle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:contentDescription="@string/first_symbol"
                android:src="@drawable/circle" />

            <ImageView
                android:id="@+id/imageview_circle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:contentDescription="@string/second_symbol"
                android:src="@drawable/circle" />

            <ImageView
                android:id="@+id/imageview_circle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:contentDescription="@string/third_symbol"
                android:src="@drawable/circle" />

            <ImageView
                android:id="@+id/imageview_circle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:contentDescription="@string/fourth_symbol"
                android:src="@drawable/circle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <models.SquareButton
                android:id="@+id/num1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_1"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_2"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_3"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <models.SquareButton
                android:id="@+id/num4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_4"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_5"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_6"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <models.SquareButton
                android:id="@+id/num7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_7"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_8"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_9"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <models.SquareButton
                android:id="@+id/biometricLoginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible"
                android:background="@drawable/baseline_fingerprint_24"
                android:backgroundTint="#808080"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/num0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/circular_bg"
                android:text="@string/_0"
                android:textSize="32sp" />

            <models.SquareButton
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/baseline_backspace_24"
                android:backgroundTint="#808080"
                android:padding="8dp"
                android:textSize="32sp" />
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Show QR code"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>