<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_margin="8dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/contact_icon"
        app:shapeAppearanceOverlay="@style/CircleShape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/baseline_mode_24"
        android:layout_margin="8dp"
        app:tint="@color/light_primary_text"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintRight_toRightOf="@+id/profileImage"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/full_name"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/language"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/language"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintLeft_toLeftOf="parent"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pinCode"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/change_pin_code"
        android:textAlignment="textStart"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/language"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/biometrics"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/auth_by_fingerprint"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/pinCode"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBiometrics"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@id/biometrics"
        app:layout_constraintRight_toRightOf="@+id/biometrics"
        app:layout_constraintTop_toTopOf="@id/biometrics"
        android:elevation="5dp"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOut"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/logout"
        android:layout_marginTop="16dp"
        android:textAlignment="textEnd"
        android:backgroundTint="@color/warningColor"
        app:layout_constraintTop_toBottomOf="@+id/biometrics"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>